[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d-vllm"
version = "0.1.0"
description = "Domain vector Large Language Model"
readme = "README.md"
authors = [{ name = "Xintao LI" }]
requires-python = ">=3.12"

# 无依赖时 dependencies 可省略
dependencies = [
    "huggingface-hub>=0.34.0,<1.0",
    "transformers>=4.57.1",
    "torch>=2.4.0",
    "jinja2>=3.1.2",
    "numpy>=1.25",
    "xxhash>=3.4.0" 
]

# 可选：定义命令行入口
[project.scripts]
d-vllm-example = "example:main"

[tool.setuptools]
# Auto-discover packages
packages = { find = {} }

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
]
